src/objects/Incident__c.object
<CustomObject>
    <description>issues to manage by the team</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Incidents</relationshipLabel>
        <relationshipName>Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Billing/Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inpatra Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel Concierge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Incidents</relationshipLabel>
        <relationshipName>Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Time_Closed__c</fullName>
        <label>Date Time Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Opened__c</fullName>
        <label>Date Time Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patient</label>
        <referenceTo>Patient__c</referenceTo>
        <relationshipLabel>Incidents</relationshipLabel>
        <relationshipName>Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Action Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on Patient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub Category</label>
        <picklist>
            <picklistValues>
                <fullName>Travel Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel Itinerary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procedure Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Treatment Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Errors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customization Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card Refunds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge Backs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discount Approval Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash/Check Refunds</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Treatment__c</fullName>
        <label>Treatment</label>
        <referenceTo>Treatment__c</referenceTo>
        <relationshipLabel>Incidents</relationshipLabel>
        <relationshipName>Treatment_Incidents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient: Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patients: Surgical Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patients: Travel Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patients: Post Surgical issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Providers: Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient Information Exchange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HTT Platform Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Message</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Incident</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>INC{00000000}</displayFormat>
        <label>Incident Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incidents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>